# Hopper-Solana-Zero-copy-State-Framework

./: .gitignore  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  test-output.txt
bindings/python/: README.md  pyproject.toml
bindings/python/hopper_svm/: __init__.py  core.py
crates/hopper-anchor/: Cargo.toml  README.md
crates/hopper-anchor/src/: anchor.rs  lib.rs
crates/hopper-core/: Cargo.toml  README.md
crates/hopper-core/src/: lib.rs  policy.rs  receipt.rs  segment_map.rs
crates/hopper-core/src/abi/: integers.rs  typed_address.rs
crates/hopper-core/src/account/: cursor.rs  dynamic.rs  header.rs  mod.rs  pod.rs  realloc_guard.rs  registry.rs  segment.rs  segment_role.rs  verified.rs
crates/hopper-core/src/accounts/: context.rs  hopper_account.rs  meta.rs  migrating.rs  mod.rs  program.rs  program_account.rs  segmented.rs  unchecked.rs
crates/hopper-core/src/check/: graph.rs  guards.rs  mod.rs  modifier.rs  trust.rs
crates/hopper-core/src/collections/: bit_set.rs  journal.rs  mod.rs  packed_map.rs  ring_buffer.rs  slab.rs  slot_map.rs  sorted_vec.rs
crates/hopper-core/src/cpi/: mod.rs
crates/hopper-core/src/dispatch/: mod.rs
crates/hopper-core/src/event/: mod.rs
crates/hopper-core/src/frame/: mod.rs  phase.rs
crates/hopper-core/src/invariant/: mod.rs
crates/hopper-core/src/math/: mod.rs
crates/hopper-core/src/migrate/: mod.rs
crates/hopper-core/src/sysvar/: cache.rs  mod.rs
crates/hopper-core/src/virtual_state/: mod.rs
crates/hopper-core/tests/: compat_regression_tests.rs  overlay_equivalence_tests.rs  property_tests.rs  trust_tests.rs  unsafe_boundary_tests.rs
crates/hopper-distribute/: Cargo.toml  README.md
crates/hopper-distribute/src/: distribute.rs  lib.rs
crates/hopper-distribute/tests/: distribute_tests.rs
crates/hopper-finance/: Cargo.toml  README.md
crates/hopper-finance/src/: amm.rs  lib.rs  slippage.rs
crates/hopper-finance/tests/: finance_tests.rs
crates/hopper-lending/: Cargo.toml  README.md
crates/hopper-lending/src/: lending.rs  lib.rs
crates/hopper-lending/tests/: lending_tests.rs
crates/hopper-macros/: Cargo.toml  README.md
crates/hopper-macros-proc/: Cargo.toml  README.md
crates/hopper-macros-proc/src/: args.rs  context.rs  crank.rs  declare_program.rs  dynamic.rs  error.rs  event.rs  init_space.rs  lib.rs  migrate.rs  pod.rs  program.rs  state.rs
crates/hopper-macros/src/: lib.rs
crates/hopper-manager/: Cargo.toml  README.md
crates/hopper-manager/src/: analyze.rs  inspect.rs  lib.rs  summary.rs
crates/hopper-memo/: Cargo.toml  README.md
crates/hopper-memo/src/: lib.rs
crates/hopper-metaplex/: Cargo.toml  README.md
crates/hopper-metaplex/src/: instructions.rs  seeds.rs
crates/hopper-multisig/: Cargo.toml  README.md
crates/hopper-multisig/src/: lib.rs  multisig.rs
crates/hopper-native/: Cargo.toml  README.md
crates/hopper-native/src/: account_view.rs  address.rs  batch.rs  borrow.rs  budget.rs  capability.rs  cpi.rs  entrypoint.rs  error.rs  expert.rs  hash.rs  instruction.rs  introspect.rs  lazy.rs  lens.rs  lib.rs  log.rs  mem.rs  pda.rs  pod.rs  project.rs  raw.rs  raw_account.rs  raw_input.rs  return_data.rs  safe.rs  syscalls.rs  system.rs  sysvar.rs  token.rs  verify.rs  wire.rs
crates/hopper-schema/: Cargo.toml  README.md
crates/hopper-schema/src/: accounts.rs  anchor_idl.rs  clientgen.rs  codama.rs  lib.rs  python_client.rs  rust_client.rs
crates/hopper-sdk/: Cargo.toml  README.md
crates/hopper-sdk/src/: builder.rs  diff.rs  fingerprint.rs  lib.rs  reader.rs  receipt.rs
crates/hopper-solana/: Cargo.toml  README.md
crates/hopper-solana/src/: ata.rs  authority.rs  balance.rs  compute.rs  constants.rs  cpi_guard.rs  interface.rs  introspect.rs  lib.rs  mint.rs  oracle.rs  token.rs  token2022_ext.rs  twap.rs  typed_cpi.rs
crates/hopper-solana/src/crypto/: ed25519.rs  merkle.rs  mod.rs
crates/hopper-spl/: Cargo.toml  README.md
crates/hopper-spl/hopper-associated-token/: Cargo.toml  README.md
crates/hopper-spl/hopper-associated-token/src/: lib.rs
crates/hopper-spl/hopper-metaplex/: Cargo.toml
crates/hopper-spl/hopper-metaplex/src/: constants.rs
crates/hopper-spl/hopper-token/: Cargo.toml  README.md
crates/hopper-spl/hopper-token-2022/: Cargo.toml
crates/hopper-spl/hopper-token-2022/src/: lib.rs
crates/hopper-spl/hopper-token/src/: lib.rs
crates/hopper-staking/: Cargo.toml  README.md
crates/hopper-staking/src/: lib.rs  staking.rs
crates/hopper-staking/tests/: staking_tests.rs
crates/hopper-svm/: Cargo.toml  README.md
crates/hopper-svm-ffi/: Cargo.toml
crates/hopper-svm-ffi/src/: lib.rs
crates/hopper-svm/programs/: README.md
crates/hopper-svm/src/: account.rs  alt.rs  builtin.rs  compute.rs  compute_budget_program.rs  engine.rs  error.rs  fees.rs  lib.rs  log.rs  result.rs  system_program.rs  sysvar.rs  token.rs  validation.rs
crates/hopper-svm/src/agave/: engine.rs  mod.rs
crates/hopper-svm/src/bpf/: adapters.rs  context.rs  cpi.rs  cpi_rust.rs  crypto_syscalls.rs  engine.rs  mod.rs  parameter.rs  syscalls.rs  sysvar_syscalls.rs  tier3_syscalls.rs
crates/hopper-svm/src/spl/: ata.rs  (+7 more)
crates/hopper-svm/tests/: agave_spl_token_cpi.rs
crates/hopper-system/: Cargo.toml  README.md
crates/hopper-system/src/: lib.rs
crates/hopper-token/: Cargo.toml
crates/hopper-vesting/: Cargo.toml  README.md
crates/hopper-vesting/src/: lib.rs  vesting.rs
crates/hopper-vesting/tests/: vesting_tests.rs
examples/hopper-nft-mint/: Cargo.toml
examples/hopper-nft-mint/src/: lib.rs
examples/hopper-registry/: Cargo.toml
examples/hopper-registry/src/: lib.rs
examples/hopper-token-2022-ata/: Cargo.toml
examples/hopper-token-2022-ata/src/: lib.rs
examples/hopper-token-2022-transfer-hook/: Cargo.toml
examples/hopper-token-2022-transfer-hook/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decode_header.rs  fuzz_decode_segments.rs  fuzz_instruction_frame.rs  fuzz_pod_overlay.rs
hopper-token-2022/: Cargo.toml
hopper-token-2022/src/: lib.rs
(+274 files in other folders)
