[package]
name = "hopper-token-2022"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Hopper-owned Token-2022 builder and screening surface. Thin, no_std instruction builders over Hopper Runtime."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-token-2022"
readme = "README.md"
keywords = ["solana", "token-2022", "cpi", "zero-copy", "hopper"]
categories = ["no-std"]

[lib]
name = "hopper_token_2022"

[dependencies]
hopper-runtime = { workspace = true }
hopper-solana = { workspace = true }

[features]
default = ["hopper-native-backend"]
hopper-native-backend = ["hopper-runtime/hopper-native-backend", "hopper-solana/hopper-native-backend"]
pinocchio-backend = ["hopper-runtime/pinocchio-backend", "hopper-solana/pinocchio-backend"]
solana-program-backend = ["hopper-runtime/solana-program-backend", "hopper-solana/solana-program-backend"]

[lints]
workspace = true