[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopper-svm"
version = "0.1.0"
description = "Python bindings for hopper-svm — in-process Solana execution harness for testing Hopper programs without a validator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "BluefootLabs", email = "contact@bluefootlabs.com" },
]
keywords = ["solana", "test", "svm", "hopper", "harness", "anchor", "quasar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    # cffi is the canonical Python ↔ C bridge. We use the ABI mode
    # (no compilation step), so users only need a prebuilt
    # libhopper_svm_ffi shared library.
    "cffi >= 1.16",
]

[project.urls]
Homepage = "https://hopperzero.dev"
Repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
Documentation = "https://hopperzero.dev/docs/svm"

[tool.setuptools]
packages = ["hopper_svm"]

[tool.setuptools.package-dir]
hopper_svm = "hopper_svm"
