[package]
name = "hopper-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs"]
description = "Core engine for the Hopper zero-copy state framework. Account memory architecture, ABI types, validation graphs, phased execution, zero-copy collections, layout evolution, and cross-program interfaces."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-core"
readme = "README.md"
keywords = ["solana", "zero-copy", "state", "framework", "no-std"]
categories = ["no-std", "embedded"]

[lib]
name = "hopper_core"

[dependencies]
hopper-runtime = { path = "../hopper-runtime", version = "0.1.0", default-features = false }
sha2-const-stable = { workspace = true }

[dev-dependencies]
sha2-const-stable = { workspace = true }
hopper-schema = { workspace = true }

[features]
default = ["programs", "hopper-native-backend"]
programs = []
log = []
hopper-native-backend = ["hopper-runtime/hopper-native-backend"]
pinocchio-backend = ["hopper-runtime/pinocchio-backend"]
solana-program-backend = ["hopper-runtime/solana-program-backend"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
