[package]
name = "hopper-distribute"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Dust-safe proportional distribution and fee extraction for Hopper. Largest-remainder splitting, basis-point + flat fees."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-distribute"
readme = "../../README.md"
keywords = ["solana", "zero-copy", "distribution", "fee", "defi"]
categories = ["no-std"]

[lib]
name = "hopper_distribute"

[dependencies]
hopper-runtime = { workspace = true }
