[package]
name = "hopper-finance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "DeFi math primitives for Hopper: AMM constant-product math, slippage guards, economic bounds. Zero-copy, no_std, no_alloc, BPF-safe."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-finance"
readme = "README.md"
keywords = ["solana", "zero-copy", "defi", "amm", "math"]
categories = ["no-std"]

[lib]
name = "hopper_finance"

[dependencies]
hopper-core = { workspace = true }
hopper-runtime = { workspace = true }
