[package]
name = "hopper-macros-proc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Optional proc macro layer for Hopper. Generates SegmentMap impls, typed context accessors, and instruction dispatchers from annotated structs. Zero runtime overhead: all code generates to the same pointer arithmetic as hand-written Pinocchio. Not required. Hopper's macro_rules! macros cover every use case without proc macros."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-macros-proc"
readme = "README.md"
keywords = ["solana", "zero-copy", "proc-macro", "codegen", "hopper"]
categories = ["no-std", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
sha2 = "0.10"
serde_json = "1"

[lints]
workspace = true
