[package]
name = "hopper-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs"]
description = "Declarative macros for Hopper zero-copy state framework. Account groups, instruction descriptors, capability tags, layout metadata. All macro_rules!, no proc macros required."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-macros"
readme = "README.md"
keywords = ["solana", "zero-copy", "macros", "hopper-native", "no-std"]
categories = ["no-std"]

[lib]
name = "hopper_macros"

[dependencies]
hopper-core = { workspace = true }
hopper-schema = { workspace = true }
hopper-runtime = { workspace = true }
