[package]
name = "hopper-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Declarative macros for Hopper zero-copy state framework. Account groups, instruction descriptors, capability tags, layout metadata. All macro_rules!, no proc macros required."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-macros"
readme = "README.md"
keywords = ["solana", "zero-copy", "macros", "hopper-native", "no-std"]
categories = ["no-std"]

[lib]
name = "hopper_macros"

[dependencies]
hopper-core = { workspace = true }
hopper-schema = { workspace = true }
hopper-runtime = { workspace = true }
hopper-system = { workspace = true }

[features]
default = ["hopper-native-backend"]
hopper-native-backend = [
	"hopper-core/hopper-native-backend",
	"hopper-schema/hopper-native-backend",
	"hopper-runtime/hopper-native-backend",
	"hopper-system/hopper-native-backend",
]
pinocchio-backend = [
	"hopper-core/pinocchio-backend",
	"hopper-schema/pinocchio-backend",
	"hopper-runtime/pinocchio-backend",
	"hopper-system/pinocchio-backend",
]
solana-program-backend = [
	"hopper-core/solana-program-backend",
	"hopper-schema/solana-program-backend",
	"hopper-runtime/solana-program-backend",
	"hopper-system/solana-program-backend",
]
