[package]
name = "hopper-manager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Schema-driven inspector for Hopper programs. Consumes the canonical runtime/layout/schema truth and returns human-readable reports. Never invents its own semantics."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-manager"
readme = "README.md"
keywords = ["solana", "hopper", "inspector", "schema", "zero-copy"]
categories = ["command-line-utilities"]

[lib]
name = "hopper_manager"

[dependencies]
hopper-schema = { workspace = true, features = ["hopper-native-backend", "receipt", "policy"] }

[lints]
workspace = true
