[package]
name = "hopper-multisig"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs"]
description = "M-of-N signer threshold checks for Hopper. Duplicate-signer prevention, zero heap allocation."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-multisig"
readme = "../../README.md"
keywords = ["solana", "zero-copy", "multisig", "threshold", "hopper-native"]
categories = ["no-std"]

[lib]
name = "hopper_multisig"

[dependencies]
hopper-runtime = { workspace = true }
