[package]
name = "hopper-native"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs"]
description = "Hopper's sovereign raw backend for Solana. Zero-copy account access, direct syscall layer, CPI infrastructure, PDA helpers, and entrypoint glue. no_std, no_alloc, no external runtime dependencies."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-native"
readme = "../../README.md"
keywords = ["solana", "zero-copy", "runtime", "no-std", "syscall"]
categories = ["no-std", "embedded"]

[lib]
name = "hopper_native"

[features]
default = ["cpi"]
cpi = []
copy = []
cu-trace = []

[dependencies]
five8_const = { workspace = true }

[lints]
workspace = true
